# MindCorpViewer-Rust

./: .gitignore  Cargo.toml  LICENCE.md  README.md
assets/bones/: bones.frag
assets/floor/: floor.dds  floor.frag  floor.vert
assets/joints/: joints.frag
assets/lines/: lines.frag  lines.vert
assets/model/: model.vert
assets/names/: names.frag  names.vert
assets/skybox/: back.dds  bottom.dds  front.dds  left.dds  right.dds  skybox.frag  top.dds
files/: config.json
src/: config_json.rs  export.rs  main.rs
src/g3d/: bones.rs  floor.rs  joints.rs  lines.rs  lines_joints.rs  mod.rs  model.rs  names.rs  refs_shaders.rs  skybox.rs
src/gls/: glam_read.rs  imgui_glfw.rs  imgui_layout.rs  mod.rs  screenshot.rs  shader.rs  texture.rs
src/lol/: anm.rs  hasher.rs  mod.rs  skl.rs  skn.rs
