[package]
name = "mindcorpviewer-rust"
version = "1.4.0"
authors = ["autergame"]

[dependencies]
native-dialog = "0.6.3"
byteorder = "1.4.3"
image = "0.24.5"
mime = "0.3.16"
glob = "0.3.1"

gl = "0.14.0"
glam = "0.22.0"
glfw = "0.50.0"
gltf = { version = "1.1.0", features = ["names", "extras", "KHR_materials_unlit"] }

imgui = "0.10.0"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"

[profile]
release = { strip = true }
release-with-debug = { inherits = "release", debug = true }