[package]
name = "mindcorpviewer-rust"
version = "1.4.1"
authors = ["autergame"]

[dependencies]
native-dialog = "0.6.4"
byteorder = "1.4.3"
image = "0.24.6"
mime = "0.3.17"
glob = "0.3.1"

gl = "0.14.0"
glam = "0.24.1"
glfw = "0.52.0"
gltf = { version = "1.2.0", features = ["names", "extras", "KHR_materials_unlit"] }

imgui = "0.11.0"

serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"

[profile]
release = { strip = true }
release-with-debug = { inherits = "release", debug = true }